# rust-sdk

./: .editorconfig  .env.example  .markdownlint.json  .releaserc.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml  openapi.yaml
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  launch.json
.flox/: env.json
.flox/env/: manifest.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  claude.yml  infer.yml  release.yml  schemas-sync.yml
.infer/: config.yaml
examples/: README.md
examples/chat/: Cargo.toml  README.md
examples/chat/src/: main.rs
examples/list/: Cargo.toml  README.md
examples/list/src/: main.rs
examples/messages/: Cargo.toml
examples/messages/src/: main.rs
src/: lib.rs  tests.rs
src/ext/: chat_request.rs  mod.rs  tool_call.rs
tools/gen-types/: Cargo.toml
tools/gen-types/src/: main.rs
