[package]
name = "inference-gateway-sdk"
version = "0.8.0-rc.2"
edition = "2021"
description = "Rust SDK for interacting with various language models through the Inference Gateway"
license = "MIT"
documentation = "https://docs.rs/inference-gateway-sdk"
homepage = "https://github.com/inference-gateway/inference-gateway"
repository = "https://github.com/inference-gateway/rust-sdk"
readme = "README.md"
keywords = ["ai", "llm", "inference", "sdk", "gateway"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
async-stream = "0.3.6"
futures-util = "0.3.31"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
mockito = "1.6.1"
tokio = { version = "1.43.0", features = ["macros", "rt"] }
