[workspace]
members = [".", "tools/gen-types", "examples/list", "examples/chat"]

[package]
name = "inference-gateway-sdk"
version = "0.15.0"
edition = "2024"
description = "Rust SDK for interacting with various language models through the Inference Gateway"
license = "Apache-2.0"
documentation = "https://docs.rs/inference-gateway-sdk"
homepage = "https://github.com/inference-gateway/inference-gateway"
repository = "https://github.com/inference-gateway/rust-sdk"
readme = "README.md"
keywords = ["ai", "llm", "inference", "sdk", "gateway"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
async-stream = "0.3.6"
futures-util = "0.3.32"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
mockito = "1.7.2"
tokio = { version = "1.52.3", features = ["macros", "rt"] }
