[package]
name = "chat-example"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "chat-example"
path = "src/main.rs"

[dependencies]
inference-gateway-sdk = { path = "../.." }
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
