[package]
name = "gen-types"
version = "0.1.0"
edition = "2024"
publish = false
description = "Internal codegen binary: turns openapi.yaml schemas into src/generated/schemas.rs."

[dependencies]
anyhow = "1"
prettyplease = "0.2"
schemars = "1.2"
serde_json = "1"
serde_yaml = "0.9"
syn = { version = "2", features = ["full"] }
typify = { version = "0.7", default-features = false }
